--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
     <div class="container">
         <h2>📍 $NAP Roadmap</h2>
         <div class="roadmap">
-            <div class="timeline-item" onclick="toggleContent('q1')"><strong>🚀 Q1 2024:</strong> Token Launch, Airdrops, Community Growth.<div class="timeline-content" id="q1">Details about Q1 initiatives...</div></div>
+            <div class="timeline-item" onclick="toggleContent('q1')"><strong>🚀 Q1 2024:</strong> Token Launch, Airdrops, Community Growth.<div class="timeline-content" id="q1">✅ Token Creation & Liquidity Setup
+✅ Website & Social Media Launch (Twitter, Telegram, Discord)
+✅ Airdrop & Meme Contests to Grow Community
+✅ Listings on Raydium & DexScreener
+✅ Push $NAP Trending on Twitter & Telegram
+
+🔹 Goal: Establish brand, get first traders & build hype....</div></div>
             <div class="timeline-item" onclick="toggleContent('q2')"><strong>📈 Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.<div class="timeline-content" id="q2">Details about Q2 initiatives...</div></div>
             <div class="timeline-item" onclick="toggleContent('q3')"><strong>🌍 Q3 2024:</strong> More Exchange Listings, DAO Governance.<div class="timeline-content" id="q3">Details about Q3 initiatives...</div></div>
             <div class="timeline-item" onclick="toggleContent('q4')"><strong>🛰️ Q4 2024:</strong> Expanding $NAP to the Metaverse.<div class="timeline-content" id="q4">Details about Q4 initiatives...</div></div>
