--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
     <div class="container">
         <h2>📍 $NAP Roadmap</h2>
         <div class="roadmap">
-            <div class="timeline-item" onclick="toggleContent('q1')"><strong>🚀 Q1 2024:</strong> Token Launch, Airdrops, Community Growth.<div class="timeline-content" id="q1">✅ Token Creation & Liquidity Setup
-✅ Website & Social Media Launch (Twitter, Telegram, Discord)
-✅ Airdrop & Meme Contests to Grow Community
-✅ Listings on Raydium & DexScreener
-✅ Push $NAP Trending on Twitter & Telegram
+            <div class="timeline-item" onclick="toggleContent('q1')"><strong>🚀 Q1 2024:</strong> Token Launch, Airdrops, Community Growth.<div class="timeline-content" id="q1">
+                <li>✅ Token Creation & Liquidity Setup</li>
+                <li>✅ Website & Social Media Launch (Twitter, Telegram, Discord)</li>
+                <li>✅ Airdrop & Meme Contests to Grow Community</li>   
+                <li>✅ Listings on Raydium & DexScreener</li>
+                <li>✅ Push $NAP Trending on Twitter & Telegram</li>    
 
 🔹 Goal: Establish brand, get first traders & build hype....</div></div>
             <div class="timeline-item" onclick="toggleContent('q2')"><strong>📈 Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.<div class="timeline-content" id="q2">Details about Q2 initiatives...</div></div>
